# scholarr

./: .dockerignore  .env.example  .gitignore  AGENTS.MD  DECOMPOSITION_CLEANUP.md  DECOMPOSITION_SLICES.md  Dockerfile  LICENSE  MODERNIZATION_PLAN.md  README.md  agents.md  diag_pubs.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_enrich.py
.claude/: settings.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs-pages.yml  release.yml  scheduled-probes.yml
alembic/: env.py
alembic/versions/: 20260216_0001_multi_user_schema.py  20260216_0002_add_user_admin_flag.py  20260216_0003_add_ingestion_queue.py  20260217_0004_queue_status_fields.py  20260217_0005_manual_run_idempotency.py  20260217_0006_scholar_profile_images.py  20260217_0007_scholar_initial_page_fingerprint.py  20260219_0008_user_settings_nav_visible_pages.py  20260219_0009_user_settings_scrape_safety_state.py  20260219_0010_author_search_shared_state.py  20260220_0011_add_publication_doi.py  20260220_0012_add_data_repair_jobs.py  20260221_0013_add_publication_pdf_jobs.py  20260221_0014_add_scholar_publication_favorite_state.py  20260221_0015_enforce_request_delay_floor.py  20260222_0016_add_publication_identifiers.py  20260224_0018_add_openalex_enriched_to_publications.py  20260224_0019_add_resolving_to_runstatus.py  20260224_0020_add_openalex_last_attempt_at.py  20260225_0021_enforce_single_active_run_per_user.py  20260225_0022_add_canonical_title_hash_to_publications.py  20260226_0023_add_arxiv_runtime_state.py  20260226_0024_add_arxiv_query_cache_entries.py  44f7e10ef777_remove_doi_from_publications_and_.py  fa0c5e3262d5_add_api_integration_keys_to_usersetting.py
app/: logging_config.py  logging_context.py  logging_utils.py  main.py  settings.py
app/api/: errors.py  media.py  router.py  runtime_deps.py  schemas.py
app/auth/: __init__.py  deps.py  runtime.py  security.py  service.py  session.py
app/db/: background_session.py  base.py  models.py  session.py
app/http/: middleware.py
app/security/: __init__.py  csrf.py
app/services/: __init__.py  continuation_queue.py  import_export.py  ingestion.py  publications.py  run_safety.py  runs.py  scheduler.py  scholar_parser.py  scholar_source.py  scholars.py  user_settings.py
docs/: README.md  index.md
docs/developer/: api-contract.md  architecture.md  contributing.md  documentation-standards.md  frontend-theme-inventory.md  ingestion.md  local-development.md  overview.md  testing.md
docs/operations/: arxiv-runbook.md  database-runbook.md  deployment.md  migration-checklist.md  overview.md  scrape-safety-runbook.md
docs/reference/: api-contract.md  api.md  changelog.md  environment.md  overview.md
docs/user/: configuration.md  getting-started.md  overview.md
docs/website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: check_theme_tokens.mjs  generate_brand_assets.sh
frontend/src/: env.d.ts  main.ts  styles.css
scripts/: check_frontend_api_contract.py  check_no_generated_artifacts.sh  premerge.sh  smoke_compose.sh
tests/: conftest.py
(+305 files in other folders)
